--- a/app/app.json
+++ b/app/app.json
@@ -18,7 +18,7 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.platypus.mobile",
       "infoPlist": {
-        "NSPhotoLibraryUsageDescription": "사진을 동기화하려면 갤러리 접근 권한이 필요합니다."
+        "NSPhotoLibraryUsageDescription": "사진을 불러오려면 갤러리 접근 권한이 필요합니다."
       }
     },
     "android": {
@@ -44,7 +44,7 @@
       [
         "expo-media-library",
         {
-          "photosPermission": "사진을 동기화하려면 갤러리 접근 권한이 필요합니다.",
+          "photosPermission": "사진을 불러오려면 갤러리 접근 권한이 필요합니다.",
           "savePhotosPermission": "사진을 저장하려면 갤러리 접근 권한이 필요합니다.",
           "isAccessMediaLocationEnabled": true
         }
